# alexi-ann

./: .gitignore  CMakeLists.txt
alexi-sim/: CMakeLists.txt
alexi-sim/include/: experiment.hpp  fake_imu.hpp  platform.hpp  terrain.hpp
alexi-sim/src/: experiment.cpp  fake_imu.cpp  main.cpp  platform.cpp  terrain.cpp
alexi-tester/: CMakeLists.txt
alexi-tester/src/: main.cpp
alexi-trainer/: CMakeLists.txt
alexi-trainer/src/: main.cpp
include/: common.hpp  fann_ffn.hpp  ffn.hpp  input_neuron.hpp  neuron.hpp  output_neuron.hpp  training_set.hpp
libaann/: CMakeLists.txt
libaann/include/: data_preprocessor.hpp  fann_ffn.hpp  ffn.hpp  rnn.hpp  training_set.hpp
libaann/src/: data_preprocessor.cpp  fann_ffn.cpp  ffn.cpp  rnn.cpp  training_set.cpp
src/: fann_ffn.cpp  ffn.cpp  main.cpp  neuron.cpp  training_set.cpp
